<!--
*    Copyright 2015 Rui Gil
*
*    Licensed under the Apache License, Version 2.0 (the "License");
*    you may not use this file except in compliance with the License.
*    You may obtain a copy of the License at
*
*    http://www.apache.org/licenses/LICENSE-2.0
*
*    Unless required by applicable law or agreed to in writing, software
*    distributed under the License is distributed on an "AS IS" BASIS,
*    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
*    See the License for the specific language governing permissions and
*    limitations under the License.
-->
<resources>
    <!-- app -->
    <string name="app_name">ShaderBox</string>

    <!-- action bar -->
    <string name="save">Save</string>
    <string name="view">View</string>
    <string name="fps">0.0 fps</string>

    <!-- shader dialog properties -->
    <string name="shader_name">Shader Name</string>
    <string name="view_cardboard">View in Google Cardboard</string>
    <string name="render_preview">Render in Preview</string>
    <string name="resolution">Resolution factor</string>
    <string name="res_high">High</string>
    <string name="res_medium">Medium</string>
    <string name="res_low">Low</string>

    <!-- shader confirm delete dialog -->
    <string name="confirm_delete_dialog">Are you sure you want to delete this shader?</string>
    <string name="confirm_delete">Delete shader</string>
    <string name="cancel">Cancel</string>

    <!-- shader about dialog -->
    <string name="about_dialog_title">ShaderBox</string>
    <string name="about_dialog_content">Open Source Shader Editor\n
&#169; 2015 Rui Gil\n
Apache 2.0 Licence\n
github.com/ruigil/shaderbox\n</string>
    <string name="ok">OK</string>

    <!-- toast notification messages -->
    <string name="shader_saved">Shader was saved</string>
    <string name="shader_deleted">Shader was deleted</string>
    <string name="shader_copied">Shader was copied as new</string>
    <string name="low_fps_auto_scale">Low FPS, resolution auto scaled down</string>
    <string name="low_fps_preview_disabled">Low FPS, preview mode disabled</string>


    <!-- main app menu -->
    <string name="action_new_shader">New Shader</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>

    <!-- shader menu -->
    <string name="delete">Delete shader</string>
    <string name="copy">Copy as new shader</string>
    <string name="share">Share shader</string>
    <string name="properties">Shader properties</string>

    <!-- resolution spinner -->
    <string-array name="resolution_entries">
        <item>Maximum</item>
        <item>Half</item>
        <item>Quarter</item>
        <item>Eighth</item>
        <item>Minimum</item>
    </string-array>

    <!-- settings -->
    <string name="pref_editor">Editor</string>
    <string name="pref_editor_text_size">Text Size</string>
    <string name="pref_editor_text_size_default">12</string>
    <string-array name="pref_editor_text_size_entries">
        <item>10sp</item>
        <item>12sp</item>
        <item>14sp</item>
        <item>16sp</item>
        <item>18sp</item>
    </string-array>

    <string-array name="pref_editor_text_size_values">
        <item>10</item>
        <item>12</item>
        <item>14</item>
        <item>16</item>
        <item>18</item>
    </string-array>

    <string name="pref_editor_opacity">Background Opacity</string>
    <string name="pref_editor_opacity_default">127</string>
    <string-array name="pref_editor_opacity_entries">
        <item>0 %</item>
        <item>25 %</item>
        <item>50 %</item>
        <item>75 %</item>
        <item>100 %</item>
    </string-array>

    <string-array name="pref_editor_opacity_values">
        <item>0</item>
        <item>63</item>
        <item>127</item>
        <item>191</item>
        <item>255</item>
    </string-array>

    <!-- settings compiler -->
    <string name="pref_compiler">Compiler</string>
    <string name="pref_compile_save">Real-time compiling</string>
    <string name="pref_compile_save_description">Unchecked will only compile on save</string>


</resources>
